--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
     <div class="section-two">
         <h2>Some random information</h2>
         <div class="cards">
-            <div class="card A">
-                <div class="card">Card</div>
+            <div class="section A">
+                <div class="card"></div>
                 <p>This is some subtext under an illustration or image</p>
             </div>
-            <div class="card B">
-                <div class="card">Card</div>
+            <div class="section B">
+                <div class="card"></div>
                 <p>This is some subtext under an illustration or image</p>
             </div>
-            <div class="card C">
-                <div class="card">Card</div>
+            <div class="section C">
+                <div class="card"></div>
                 <p>This is some subtext under an illustration or image</p>
             </div>
-            <div class="card D">
-                <div class="card">Card</div>
+            <div class="section D">
+                <div class="card"></div>
                 <p>This is some subtext under an illustration or image</p>
             </div>
         </div>
