completed project odin-landing-page

--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
     </div>
     <div class="section-four">
         <div class="call-to-action">
-            <h5>Call to action! It's time!</h5>
+            <div class="left-part">
+                <h5>Call to action! It's time!</h5>
             <p>Sign up for our product by clicking that button right over here!</p>
+            </div>
+            
             <button class="secondary">Sign Up</button>
         </div>
     </div>
